<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_tv"
        android:id="@+id/priceTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/basePriceEditText"
        android:text="@string/price_et"
        android:ems="6"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/priceTextView"
        android:layout_alignEnd="@+id/priceTextView"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_cb"
            android:id="@+id/tenRadio"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_cb"
            android:id="@+id/twentyRadio"
            android:checked="false"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DiscountLevel_tv"
        android:id="@+id/textView"
        android:layout_marginTop="129dp"
        android:layout_below="@+id/basePriceEditText"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/disPriceEditText"
        android:inputType="numberDecimal"
        android:layout_marginTop="42dp"
        android:text="@string/disPrice_et"
        android:layout_below="@+id/basePriceEditText"
        android:layout_alignLeft="@+id/basePriceEditText"
        android:layout_alignStart="@+id/basePriceEditText"
        android:layout_alignRight="@+id/basePriceEditText"
        android:layout_alignEnd="@+id/basePriceEditText"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalPrice_tv"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/disPriceEditText"
        android:layout_alignBottom="@+id/disPriceEditText"
        android:layout_alignLeft="@+id/priceTextView"
        android:layout_alignStart="@+id/priceTextView"/>

</RelativeLayout>
